--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,15 @@
       </header>
       <div class="container">
         <div>
-          <h3>Add something to do!</h3>
+          <h3>Sort By: <button type="button" ng-click="thing='+description'">Asc</button><button type="button" ng-click="thing='-description'">Dec</button>
+          <input type="text" ng-model="filterer" placeholder="Filter By..."></h3>
+          <h3>New To Do -->
           <form ng-submit="newTodo(thingtodo)">
-            <input ng-model="thingtodo" placeholder="What do you need to do?">
-          </form>
+            <input ng-model="thingtodo" placeholder="What's next?">
+          </form></h3>
           <p>**Double Click To Do Item to Change**</p>
         </div>
-        <div ng-repeat="todo in todos">
+        <div ng-repeat="todo in todos | orderBy: thing | filter: filterer">
             <h3>
               <button type="button" ng-click="deleteTodo(todo)">X</button>
               <form ng-submit="changeTodo(todo)">
